added good authorization with exception throws and redesighned frontend